--- a/index.html
+++ b/index.html
@@ -2,34 +2,31 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Index - THE0CLAN</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>REGISTROS</title>
 <style>
-  html, body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-  }
   body {
-    background: url('FinalGrande.png') no-repeat center center fixed;
-    background-size: cover;
+    margin: 0;
+    height: 100vh;
+    background-image: url('your-image.jpg'); /* Replace with your image file */
+    background-size: contain; /* Show the whole image */
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: black; /* Fill borders if aspect ratio differs */
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: flex-start; /* Align toward top */
   }
   a {
-    font-size: 8vw; /* Huge font, scales with screen width */
+    margin-top: 16.6vh; /* About 1/6 down from the top */
+    font-size: 8vw; /* Huge text, scales with screen width */
     font-weight: bold;
     color: white;
     text-decoration: none;
-    background-color: rgba(0, 0, 0, 0.5);
-    padding: 20px 40px;
-    border-radius: 10px;
-    font-family: sans-serif;
-    margin-top: 16.6vh; /* Push down about 1/6 of the screen */
-    transition: background-color 0.3s;
+    text-shadow: 2px 2px 4px black;
   }
   a:hover {
-    background-color: rgba(0, 0, 0, 0.8);
+    color: yellow;
   }
 </style>
 </head>
