--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   body {
     margin: 0;
     height: 100vh;
-    background-image: url('your-image.jpg'); /* Replace with your image file */
+    background-image: url('FinalGrande.png'); /* Replace with your image file */
     background-size: contain; /* Show the whole image */
     background-repeat: no-repeat;
     background-position: center;
