--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>REGISTROS</title>
+<title>T0C - REGISTRO</title>
 <style>
   body {
     margin: 0;
@@ -43,8 +43,8 @@
 </head>
 <body>
   <div class="container">
-    <img src="your-image.jpg" alt="Background">
-    <a href="mainmenu.html" class="text-link">REGISTROS</a>
+    <img src="FinalGrande.png" alt="Background">
+    <a href="mainmenu.html" class="text-link">REGISTRO</a>
   </div>
 </body>
 </html>
