--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>THE0CLAN</title>
+<title>Página Inicial</title>
 <style>
   html, body {
     margin: 0;
@@ -35,36 +35,32 @@
   }
 
   .bottom-half .links-container {
-    width: 33%; /* 2/3 of previous 50% width */
     text-align: center;
-    font-size: 2.7vw; /* scaled down proportionally */
+    font-size: 2.7vw;
     font-weight: bold;
-    white-space: nowrap;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     position: absolute;
     top: 25%; /* halfway in bottom-half = 75% of full screen */
     left: 50%;
-    transform: translate(-50%, -50%); /* center horizontally */
+    transform: translateX(-50%);
   }
 
   .bottom-half .links-container a {
     color: #fff;
     text-decoration: none;
-    margin: 0 0.25em;
+    margin: 0.2em 0;
   }
 
   .bottom-half .links-container a:hover {
     color: #f0c000;
   }
 
-  .bottom-half .separator {
-    margin: 0 0.25em;
-    color: #fff;
-  }
-
   @media (max-width: 800px) {
     .bottom-half .links-container {
       font-size: 4vw;
-      width: 50%;
     }
   }
 </style>
@@ -77,9 +73,9 @@
 
   <div class="bottom-half">
     <div class="links-container">
-      <a href="liga.html">LIGAS</a><span class="separator">-</span>
-      <a href="raids.html">RAIDS</a><span class="separator">-</span>
-      <a href="jogos.html">JOGOS</a><span class="separator">-</span>
+      <a href="liga.html">LIGAS</a>
+      <a href="raids.html">RAIDS</a>
+      <a href="jogos.html">JOGOS</a>
       <a href="guerras.html">GUERRAS</a>
     </div>
   </div>
