--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
     height: 50%;
     display: flex;
     justify-content: center;
-    align-items: flex-start;
-    position: relative;
+    align-items: center; /* vertically center */
   }
 
-  .bottom-half .links-container {
+  .links-container {
     text-align: center;
     font-size: 2.7vw;
     font-weight: bold;
@@ -42,24 +41,20 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    position: absolute;
-    top: 25%; /* halfway in bottom-half = 75% of full screen */
-    left: 50%;
-    transform: translateX(-50%);
   }
 
-  .bottom-half .links-container a {
+  .links-container a {
     color: #fff;
     text-decoration: none;
     margin: 0.2em 0;
   }
 
-  .bottom-half .links-container a:hover {
+  .links-container a:hover {
     color: #f0c000;
   }
 
   @media (max-width: 800px) {
-    .bottom-half .links-container {
+    .links-container {
       font-size: 4vw;
     }
   }
