--- a/raids.html
+++ b/raids.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>T0C - RAIDS</title>
+<title>RAIDS</title>
 <style>
   html, body {
     margin: 0;
@@ -13,6 +13,7 @@
     background: #000;
     color: #fff;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -21,6 +22,18 @@
   .message {
     font-size: 3vw;
     font-weight: bold;
+    margin-bottom: 1em;
+  }
+
+  .back-link {
+    font-size: 2.5vw;
+    font-weight: bold;
+    color: #f0c000;
+    text-decoration: underline;
+  }
+
+  .back-link:hover {
+    color: #fff;
   }
 </style>
 </head>
@@ -28,5 +41,6 @@
   <div class="message">
     Registro de RAIDS ainda não foi upado.
   </div>
+  <a href="index.html" class="back-link">Voltar ao início.</a>
 </body>
 </html>
