--- a/liga.html
+++ b/liga.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
 <meta charset="UTF-8">
-<title>LIGA</title>
+<title>T0C - LIGAS</title>
 <style>
   body {
     background-color: #000;
@@ -11,6 +11,18 @@
     text-align: center;
     margin: 0;
     padding: 2em;
+  }
+  .header {
+    font-size: 2em;
+    font-weight: bold;
+    margin-bottom: 0.5em;
+  }
+  .backLink {
+    display: block;
+    color: #f0c000;
+    text-decoration: underline;
+    margin-bottom: 2em;
+    font-size: 1.2em;
   }
   .year {
     font-size: 2em;
@@ -30,6 +42,9 @@
 </style>
 </head>
 <body>
+
+<div class="header">THE0CLAN - LIGAS</div>
+<a class="backLink" href="index.html">Voltar ao início</a>
 
 <div id="yearsContainer"></div>
 
